Changes since Pike 8.0.370 (release 6)
----------------------------------------------------------------------

Bug fixes
---------

o String character range

  Fixed a bug where a string could incorrectly have it's character
  range start point set to 0 when added with an empty string. This in
  turn would incorrectly block the string from being used by functions
  that require strings without null characters as argument or
  incorrectly take optimization paths.

o VCDiff

  Fixed type of decode_chunk().

o Parser.XML

  UTF-8 encoded documents with inital BOM was not decoded correctly.

  Serializing Parser.XML.Tree objects will now entity escape
  characters that can not be encoded in the selected outupt charser.


Changes since Pike 8.0.358 (release 5)
----------------------------------------------------------------------

New features
------------

o Calendar

  Updated Calendar to use timezonedata from tzdata2016j.

o Nettle

  Added version().

o Refdoc

  Updated to new Pike site layout.

Bug fixes
---------

o JSON

  Fixed a bug in the unicode handling of Standards.JSON.decode(), which
  treated codepoints slightly below the surrogate range as invalid.

o pike -x pmar_install

  Works again and properly verifies PMAR checksums.

o ::_indices(), ::_values(), ::_types(), ::`->(), ::`->=()

  Fixed several argument checking bugs in the magic_* functions.

o Fixed some bugs in the pmar installer.

o Msql

  Fixed some compilation issues.

o Sql.pgsql

  Fixed broken reconnect behaviour when the database connection dies.

Runtime
-------

o Added workaround for incompatibility in MS Windows 10's Linux
  emulation layer.


Changes since Pike 8.0.276 (release 4)
----------------------------------------------------------------------

New features
------------

o Calendar

  Updated Calendar to use timezonedata from tzdata2016i.

o Crypto.ECC

  Zero-pad short signature integers.

o Protocols.HTTP.Server.HeaderParser
